--- a/assets/modules/home/views/home.html
+++ b/assets/modules/home/views/home.html
@@ -1,1 +1,7 @@
-<h1>Home</h1>
+<div class="row">
+    <div id="col-sm-12">
+        <h1 class="text-center">Bienvenido Asociado {{home.username}}</h1>    
+        <h4 class="text-center"> Su ultimo inicio de sesión fue el {{home.last_login | date:'dd/MM/yyyy a las HH:mm:ss'}}</h4>
+    </div>    
+</div>
+
